# AVATAR

./: .gitignore  Modelfile  README.md  avatar_data.jsonl  infer.py  infer_tts.py  infer_voice.py  llm_server.py  merge_lora.py  train_avatar.py
src/install/jeju/share/jeju/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/jeju/share/jeju/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_jeju__rosidl_generator_cExport-noconfig.cmake  export_jeju__rosidl_generator_cExport.cmake  export_jeju__rosidl_generator_cppExport.cmake  export_jeju__rosidl_generator_pyExport-noconfig.cmake  export_jeju__rosidl_generator_pyExport.cmake  export_jeju__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_jeju__rosidl_typesupport_fastrtps_cExport.cmake  export_jeju__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_jeju__rosidl_typesupport_fastrtps_cppExport.cmake  jejuConfig.cmake  jeju__rosidl_typesupport_cExport-noconfig.cmake  jeju__rosidl_typesupport_cExport.cmake  jeju__rosidl_typesupport_cppExport-noconfig.cmake  jeju__rosidl_typesupport_cppExport.cmake  jeju__rosidl_typesupport_introspection_cExport-noconfig.cmake  jeju__rosidl_typesupport_introspection_cExport.cmake  jeju__rosidl_typesupport_introspection_cppExport-noconfig.cmake  jeju__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
src/install/jeju/share/jeju/launch/: Tracking_Ready_Bon.launch.py  car_control.launch.py  lidar.launch.py  sensor_ready.launch.py  visualization.launch.py
src/install/jeju/share/jeju/msg/: CtrlMode.idl  CtrlMode.msg  ERPRead.idl  ERPRead.msg  ERPWrite.idl  ERPWrite.msg  LaneData.idl  (+3 more)
src/install/video_recorder/share/video_recorder/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
(+350 files in other folders)
