<?xml version="1.0"?>
<package format="3">
  <name>jeju</name>
  <version>0.0.1</version>
  <description>macaron_07 ROS 2 package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- 빌드 도구 의존성 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- 빌드 의존성 -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <depend>builtin_interfaces</depend>



  <!-- 실행 의존성 -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>libserial</exec_depend>
  <exec_depend>ros2_numpy</exec_depend>

  <exec_depend>filterpy</exec_depend>

  <!-- 테스트 의존성 -->
  <test_depend>ament_cmake_test</test_depend>

  <!-- rosidl 그룹 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

